Fix extra right margin on small devices like the iPhone.

--- a/_assets/stylesheets/_article.scss
+++ b/_assets/stylesheets/_article.scss
@@ -50,6 +50,7 @@ article {
         margin:0;
         font-size:0.9em;
         white-space: nowrap;
+        overflow: hidden;
         
         p {
             margin:0;
